# cutter_disk

./: .gitignore  CMakeLists.txt
components/as5600_sensor/: CMakeLists.txt  as5600_sensor.c  velocity_task.c
components/as5600_sensor/include/: as5600_sensor.h  velocity_task.h
components/control/: CMakeLists.txt  control.c  motors.c  mypid.c
components/control/include/: control.h  motors.h  mypid.h
components/robot_tasks/: CMakeLists.txt  robot_tasks.c
components/robot_tasks/include/: robot_tasks.h
components/seed_dispenser/: CMakeLists.txt  seed_dispenser.c
components/seed_dispenser/include/: seed_dispenser.h  seed_dispenser_task_common.h
components/sensors/: CMakeLists.txt  sensor_tasks.c
components/sensors/include/: sensor_tasks.h
components/state_machine/: CMakeLists.txt  state_machine.c
components/uart_communication/: CMakeLists.txt  uart_communication.c
components/uart_communication/include/: uart_communication.h
main/: idf_component.yml  main.c
